# powerplant-coding-challenge

powerplant-api/: Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
powerplant-api/powerplant_api/: run.py
powerplant-api/powerplant_api/app/: energy_ops.py  main.py  schemas.py
powerplant-api/powerplant_api/app/energy_management/: __init__.py  energy_ops.py
powerplant-api/powerplant_api/app/schemas/: __init__.py  powerplant.py
powerplant-api/tests/: test_power_computation.py  test_powerplant_api.py  test_productionplan.py
